force-app/main/default/objects/Failed_Event__c/Failed_Event__c.object-meta.xml
<CustomObject>
    <description>Dead Letter Queue for RevenueTrust platform events that failed processing.</description>
    <label>Failed Event</label>
    <nameField>
        <displayFormat>FE-{0000}</displayFormat>
        <label>Failed Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Failed Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>