force-app/main/default/objects/Failed_Event__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>The type/channel of the platform event that failed</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>