force-app/main/default/objects/Failed_Event__c/fields/Original_Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Original_Event_Time__c</fullName>
    <description>Timestamp of the original platform event</description>
    <label>Original Event Time</label>
    <type>DateTime</type>
</CustomField>