force-app/main/default/objects/Failed_Event__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Full JSON payload of the failed event for replay</description>
    <label>Payload</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>