force-app/main/default/objects/Failed_Event__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Current processing status of the failed event</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Failed</fullName><default>true</default><label>Failed</label></value>
            <value><fullName>Retrying</fullName><default>false</default><label>Retrying</label></value>
            <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
            <value><fullName>Abandoned</fullName><default>false</default><label>Abandoned</label></value>
            <value><fullName>Superseded</fullName><default>false</default><label>Superseded</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>